Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-125224

Cannot stop animation if it was restarted before the last loop completed

    XMLWordPrintable

Details

    • cdf71ef7b (dev), 1ef069799 (6.8), 5f16dfbe6 (6.7), 5e2878df3 (tqtc/lts-6.5), 1ffc2adea (tqtc/lts-6.2), 592235e76 (tqtc/lts-5.15)

    Description

      It's impossible to stop animation or change running property with alwaysRunToEnd: true; loops: Animation.Infinite after next steps:

      stop()
      alwaysRunToEnd = false
      start()

       

      Example project in attachments. Just run it and press button with text "brokeAnimation"

      Attachments

        1. QmlAnimationBug.zip
          2 kB
          Nikita Medunitsa
        For Gerrit Dashboard: QTBUG-125224
        # Subject Branch Project Status CR V

        Activity

          People

            anmaatta Antti Määttä
            nmedunitsa Nikita Medunitsa
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes