QQuickAnimation: Fix setting running property

The setRunning logic can call the setRunning recursively while changing
the property. This might cause missmatch between whether the animation
is actually running and the running property. If we detect recursive
call, make sure that the d->running property matches with the animation
job running status.

Fixes: QTBUG-125224
Change-Id: I2e580d45cea7fd9cb010bc37a366def083b24abb
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit cdf71ef7b62dd92d23a7485a3490527d28097db5)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 1ef06979983ab87f2f0b0d15d36c98d4a05deeea)
(cherry picked from commit 5f16dfbe6fecc8315c9752876afc71a96c182d29)
(cherry picked from commit 5e2878df39850f22240151471aa2211d54721702)
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
(cherry picked from commit 1ffc2adeaae09097a9c53a113ff0d9b1062447c0)